--- a/_layouts/CV.html
+++ b/_layouts/CV.html
@@ -16,7 +16,7 @@ layout: default
         adobeDCView.previewFile({
             content: {
                 location:
-                    { url: "https://drive.google.com/file/d/1pZZ1eDvylV5VT4YiSdjP9VUyJm51sdGs/preview" }
+                    { url: "https://landonbutler.github.io/Landon%20Butler%20-%20CV.pdf" }
             },
             metaData: { fileName: "Landon Butler - CV.pdf" }
         },
