--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<meta charset="utf-8">
+﻿<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,7 +19,7 @@
 
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="stylesheet" href="{{ '/assets/css/skin.css' | relative_url }}">
-
+<link rel="icon" href="../LBlogo.png">
 <!-- Begin selecting skin -->
 {% unless site.skin %}
   <script>
