edited research page

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<h1>Anomaly Detection on Hypergraphs</h1>
 <hr />
-<hr />
-<iframe width="560" height="315" src="https://www.youtube.com/embed/UNBvsPZIudU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h1>Learning Connectivity for Data Distribution in Robot Teams</h1>
+<div style="text-align: center"><iframe width="560" height="315" src="https://www.youtube.com/embed/UNBvsPZIudU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
