added more text

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -5,7 +5,7 @@ layout: default
     <h1>Anomaly Detection on Hypergraphs</h1>
     <hr />
     <h1>Learning Connectivity for Data Distribution in Robot Teams</h1>
-    
+    <p>The majority of algorithms for control of multi-robot teams operate under the assumption that low-latency, global state information necessary to coordinate agent actions can readily be disseminated among the team. However, in harsh environments, especially in those with no existing communication infrastructure, robots must form ad-hoc networks, forcing the team to operate in a distributed fashion. To overcome this challenge, we developed a task-agnostic, decentralized, low-latency method for data distribution in ad-hoc networks using Graph Neural Networks (GNN).</p>
     <img src="..\ConnectivityDiagram.JPG" draggable="false" class="align-center" style="width: 500px">
     <p>The distributed GNN communication policies were trained via reinforcement learning using the average Age of Information (AoI) as the reward function. We showed that the AoI reward function improves training distribution. Our approach performs favorably compared to industry-standard methods for data distribution such as random flooding and round robin in environments of varying transmission power and team sizes. We also show that the trained policies successfully generalize to larger teams of both static and mobile agents.</p>
     <div style="text-align: center"><iframe width="560" height="315" src="https://www.youtube.com/embed/UNBvsPZIudU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
