--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,13 +7,13 @@ layout: default
         Hello! I'm Landon, a senior at the University of Pennsylvania. I'm concurrently pursuing a Master's degree in Data Science and a Bachelor's degree in Systems Engineering, seeking to better understand the systems that comprise the world around us from a data-driven perspective. Additionally, I'm interested in learning how to leverage a broad range of quantitive and computational skills, and hence, am finishing minors in Computer Science, Mathematics, and Statistics.
     </p>
     <p style="hyphens: none">
-        My research lies at the confluence of network science and machine learning, where I develop and apply learning algorithms to dynamical systems situated on networks. So far, I've had the opportunity to research for <a target="_blank" class="homepageLinks" href="https://landonbutler.github.io/research#datadistribution">data distribution polices amongst robot teams</a> and <a target="_blank" class="homepageLinks" href="https://landonbutler.github.io/research#anomalydetection">anomaly detection techniques on multigraphs and hypergraphs</a>.
+        My research lies at the confluence of network science and machine learning, where I develop and apply learning algorithms to dynamical systems situated on networks. In doing so, I've been able to incoporate concepts from statistics, information theory, game theory, and a variety of other tangential domains. So far, I've had the opportunity to research for <a target="_blank" class="homepageLinks" href="https://landonbutler.github.io/research#datadistribution">data distribution polices amongst robot teams</a> and <a target="_blank" class="homepageLinks" href="https://landonbutler.github.io/research#anomalydetection">anomaly detection techniques on multigraphs and hypergraphs</a>.
     </p>
     <p style="hyphens: none">
 
         Recently, I've began a Head Teaching Assistantship in the <a target="_blank" class="homepageLinks" href="https://www.cis.upenn.edu/graduate/program-offerings/master-of-computer-and-information-technology/">MCIT online program</a> for <a target="_blank" class="homepageLinks" href="https://onlinelearning.seas.upenn.edu/mcit-online-course-list/">ESE 542: Statistics for Data Science</a>. I'm passionate about sharing these skills with budding data scientists, as learning how to capture, intepret, and leverage data will be pivotal for many careers over the next few decades.
     </p>
     <p style="hyphens: none">
-        Outside of academics, I'm also a percussionist in the Penn Band</a> and <a target="_blank" class="homepageLinks" href="https://www.youtube.com/watch?v=jZbI4XdOvA8">write drum scores in my spare time</a>.
+        Outside of academics, I'm also a percussionist in the Penn Band and <a target="_blank" class="homepageLinks" href="https://www.youtube.com/watch?v=jZbI4XdOvA8">write drum scores in my spare time</a>.
     </p>
 </div>
