--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="home">
     <div style="text-align:center">
-        <h1><a id="anomalydetection">Anomaly Detection on Hypergraphs</a></h1>
+        <a id="anomalydetection"><h1>Anomaly Detection on Hypergraphs</h1></a>
 
     </div>
     <p style="hyphens: none">In traditional graphs, edges denote a relationship between two nodes. In hypergraphs, relations are generalized to be between any subset of nodes. This richer definition allows us to more accurately model interactions on social networks, better track the spread of epidemics, and improve the performance of recommendation systems. </p>
@@ -11,7 +11,7 @@ layout: default
     <p style="hyphens: none">Anomaly detection is the process of identifying behavior that is out of the ordinary. My current research centers on developing learning algorithms that will analyze hypergraph data and search for anomalous behavior.</p>
     <hr />
     <div style="text-align:center">
-        <h1><a id="datadistribution">Learning Connectivity for Data Distribution in Robot Teams</a></h1>
+        <a id="datadistribution"><h1>Learning Connectivity for Data Distribution in Robot Teams</h1></a>
         <p style="hyphens: none">
             <a target="_blank" class="sidebarLinks" style="        text-align: center;
         margin-bottom: 1rem;
