--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,9 +10,9 @@ layout: default
         My research lies at the confluence of network science and machine learning, where I develop and apply learning algorithms to dynamical systems situated on networks. In doing so, I've been able to incoporate concepts from statistics, information theory, game theory, and a variety of other tangential domains. So far, I've had the opportunity to research for <a target="_blank" class="homepageLinks" href="https://landonbutler.github.io/research#datadistribution">data distribution polices amongst robot teams</a> and <a target="_blank" class="homepageLinks" href="https://landonbutler.github.io/research#anomalydetection">anomaly detection techniques on multigraphs and hypergraphs</a>.
     </p>
     <p style="hyphens: none">
-
-        Recently, I've began a Head Teaching Assistantship in the <a target="_blank" class="homepageLinks" href="https://www.cis.upenn.edu/graduate/program-offerings/master-of-computer-and-information-technology/">MCIT online program</a> for <a target="_blank" class="homepageLinks" href="https://onlinelearning.seas.upenn.edu/mcit-online-course-list/">ESE 542: Statistics for Data Science</a>. I'm passionate about sharing these skills with budding data scientists, as learning how to capture, intepret, and leverage data will be pivotal for many careers over the next few decades.
-    </p>
+        I'm also passionate about sharing about these fields through teaching. At Penn, I've been a Teaching Assistant for three courses: an undergraduate level course in data science, a master's level course in applied machine learning, and a PhD level course on graph neural networks. You can learn more about my teaching in these courses <a target="_blank" class="homepageLinks" href="https://landonbutler.github.io/teaching/">
+    here</a>.
+</p>
     <p style="hyphens: none">
         Outside of academics, I'm also a percussionist in the Penn Band and <a target="_blank" class="homepageLinks" href="https://www.youtube.com/watch?v=jZbI4XdOvA8">write drum scores in my spare time</a>.
     </p>
