--- a/_layouts/teaching.html
+++ b/_layouts/teaching.html
@@ -5,11 +5,14 @@ layout: default
 <div class="home">
     <div style="text-align:left">
         <h3>ESE 305: Foundations of Data Science</h3>
+        <h5>Teaching Assistant, Fall 2021, Professor Hamed Hassani</h5>
     </div>
     <div style="text-align:left">
         <h3>ESE 514: Graph Neural Networks</h3>
+        <h5>Teaching Assistant, Fall 2021, Professor Alejandro Ribeiro</h5>
     </div>
     <div style="text-align:left">
         <h3>ESE 542: Statistics for Data Science - Applied Machine Learning</h3>
+        <h5>Head Teaching Assistant, Spring + Summer 2021, Professor Victor Preciado</h5>
     </div>
 </div>
