--- a/_layouts/teaching.html
+++ b/_layouts/teaching.html
@@ -16,6 +16,6 @@ layout: default
     <div style="text-align:left">
         <h3 style="margin-bottom: 0rem">ESE 542: Statistics for Data Science - Applied Machine Learning</h3>
         <h5>Head Teaching Assistant, Spring + Summer 2021, Professor Victor Preciado</h5>
-        <p>Graduate course in Penn’s MCIT Online program where students are taught a broad range of statistical tools and analysis models in order to extract meaningful information from large datasets.</p>
+        <p>Graduate course in Penn's MCIT Online program where students are taught a broad range of statistical tools and analysis models in order to extract meaningful information from large datasets.</p>
     </div>
 </div>
