--- a/_layouts/teaching.html
+++ b/_layouts/teaching.html
@@ -4,18 +4,24 @@ layout: default
 
 <div class="home">
     <div style="text-align:left">
-        <h3 style="margin-bottom: 0rem">ESE 305: Foundations of Data Science</h3>
-        <h5>Teaching Assistant, Fall 2021, Professor Hamed Hassani</h5>
-        <p>Undergraduate course where students are introduced to a breadth of foundational machine learning models for analysis of large datasets. Learning supported with hands-on Python programming assignments.</p>
+        <a target="_blank" class="homepageLinks" href="https://catalog.upenn.edu/courses/ese/">
+            <h3 style="margin-bottom: 0rem">ESE 305: Foundations of Data Science</h3>
+        </a>
+            <h5 style="margin-bottom: 1rem">Teaching Assistant, Fall 2021, Professor Hamed Hassani</h5>
+            <p style="hyphens: none">Undergraduate course where students are introduced to a breadth of foundational machine learning models for analysis of large datasets. Learning supported with hands-on Python programming assignments.</p>
+</div>
+    <div style="text-align:left">
+        <a target="_blank" class="homepageLinks" href="https://gnn.seas.upenn.edu/">
+            <h3 style="margin-bottom: 0rem">ESE 514: Graph Neural Networks</h3>
+            </a>
+            <h5 style="margin-bottom: 1rem">Teaching Assistant, Fall 2021, Professor Alejandro Ribeiro</h5>
+            <p style="hyphens: none">PhD-level course covering information processing architectures for signals supported on graphs. Graph Neural Networks enabling scalable learning on large scale problems involving high dimensional signals.</p>
     </div>
     <div style="text-align:left">
-        <h3 style="margin-bottom: 0rem">ESE 514: Graph Neural Networks</h3>
-        <h5>Teaching Assistant, Fall 2021, Professor Alejandro Ribeiro</h5>
-        <p>PhD-level course covering information processing architectures for signals supported on graphs. Graph Neural Networks enabling scalable learning on large scale problems involving high dimensional signals.</p>
-    </div>
-    <div style="text-align:left">
-        <h3 style="margin-bottom: 0rem">ESE 542: Statistics for Data Science - Applied Machine Learning</h3>
-        <h5>Head Teaching Assistant, Spring + Summer 2021, Professor Victor Preciado</h5>
-        <p>Graduate course in Penn's MCIT Online program where students are taught a broad range of statistical tools and analysis models in order to extract meaningful information from large datasets.</p>
+        <a target="_blank" class="homepageLinks" href="https://onlinelearning.seas.upenn.edu/mcit-online-course-list/">
+            <h3 style="margin-bottom: 0rem">ESE 542: Statistics for Data Science - Applied Machine Learning</h3>
+            </a>
+            <h5 style="margin-bottom: 1rem">Head Teaching Assistant, Spring + Summer 2021, Professor Victor Preciado</h5>
+            <p style="hyphens: none">Graduate course in Penn's MCIT Online program where students are taught a broad range of statistical tools and analysis models in order to extract meaningful information from large datasets.</p>
     </div>
 </div>
