--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,10 @@
         <li>
             <p style="        margin-bottom: 1rem;
         font-weight: 600;
-        color: #484848;">University of Pennsylvania</p>
+        color: #484848;">University of</p>
+            <p style="        margin-bottom: 1rem;
+        font-weight: 600;
+        color: #484848;">Pennsylvania</p>
         </li>
         <li>
             <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;" href="https://dats.seas.upenn.edu/">Data Science</a>
