--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<title>Landon Butler</title>
 <div class="home">
     <p style="hyphens: none">
         Hello! I'm Landon, a senior at the University of Pennsylvania. I'm concurrently pursuing a Master's degree in Data Science and a Bachelor's degree in Systems Engineering, seeking to better understand the systems that comprise the world around us from a data-driven perspective.
