updated pictures / research page

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -7,7 +7,15 @@ layout: default
 
     </div>
     <p style="hyphens: none">In traditional graphs, edges denote a relationship between two nodes. In hypergraphs, relations are generalized to be between any subset of nodes. This richer definition allows us to more accurately model interactions on social networks, better track the spread of epidemics, and improve the performance of recommendation systems. </p>
-    <img src="..\hypergraph.png" draggable="false" class="align-center" style="margin-bottom: 2rem;width: 500px">
+    <img src="..\hypergraph.JPG" draggable="false" class="align-center" style="margin-bottom: 2rem;width: 500px">
+    <p style="hyphens: none">Anomaly detection is the process of identifying behavior that is out of the ordinary. My current research centers on developing learning algorithms that will analyze hypergraph data and search for anomalous behavior.</p>
+    <hr />
+    <div style="text-align:center">
+        <a id="amultigraph" style="color:black;text-decoration:none;"><h1>Multigraph Learning</h1></a>
+
+    </div>
+    <p style="hyphens: none">In traditional graphs, edges denote a relationship between two nodes. In hypergraphs, relations are generalized to be between any subset of nodes. This richer definition allows us to more accurately model interactions on social networks, better track the spread of epidemics, and improve the performance of recommendation systems. </p>
+    <img src="..\Multigraph.JPG" draggable="false" class="align-center" style="margin-bottom: 2rem;width: 500px">
     <p style="hyphens: none">Anomaly detection is the process of identifying behavior that is out of the ordinary. My current research centers on developing learning algorithms that will analyze hypergraph data and search for anomalous behavior.</p>
     <hr />
     <div style="text-align:center">
