--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -6,17 +6,17 @@ layout: default
         <a id="anomalydetection" style="color:black;text-decoration:none;"><h1>Anomaly Detection on Hypergraphs</h1></a>
 
     </div>
-    <p style="hyphens: none">In traditional graphs, edges denote a relationship between two nodes. In hypergraphs, relations are generalized to be between any subset of nodes. This richer definition allows us to more accurately model interactions on social networks, better track the spread of epidemics, and improve the performance of recommendation systems. </p>
+    <p style="hyphens: none">In traditional graphs, edges denote a relationship between two nodes. In hypergraphs, relations are generalized to be between any subset of nodes. This richer definition allows us to more accurately model community interactions within social systems, manage transactions on the blockchain, and better track the spread of epidemics. </p>
     <img src="..\hypergraph.JPG" draggable="false" class="align-center" style="margin-bottom: 2rem;width: 400px">
     <p style="hyphens: none">Anomaly detection is the process of identifying behavior that is out of the ordinary. My current research centers on developing learning algorithms that will analyze hypergraph data and search for anomalous behavior.</p>
     <hr />
     <div style="text-align:center">
-        <a id="amultigraph" style="color:black;text-decoration:none;"><h1>Multigraph Learning</h1></a>
+        <a id="multigraph" style="color:black;text-decoration:none;"><h1>Multigraph Learning</h1></a>
 
     </div>
-    <p style="hyphens: none">In traditional graphs, edges denote a relationship between two nodes. In hypergraphs, relations are generalized to be between any subset of nodes. This richer definition allows us to more accurately model interactions on social networks, better track the spread of epidemics, and improve the performance of recommendation systems. </p>
+    <p style="hyphens: none">Multigraphs are useful in modeling systems where pairs of entities can have multiple connections of differing classes, such as in social, communication, and transportation networks. Existing learning approaches often employ Graph Neural Networks with independent features for each edge class, but these fail to capture the rich interactions between edge classes. </p>
     <img src="..\Multigraph.JPG" draggable="false" class="align-center" style="margin-bottom: 2rem;width: 400px">
-    <p style="hyphens: none">Anomaly detection is the process of identifying behavior that is out of the ordinary. My current research centers on developing learning algorithms that will analyze hypergraph data and search for anomalous behavior.</p>
+    <p style="hyphens: none">Rooted in algebraic signal processing, I have been developing a learning framework for multigraphs using generalized notions of filtering, convolution, and spectral representation.  Leveraging this framework, I have designed two learning algorithms and showcased their applicability to hate-speech detection on social networks and to the improvement of recommendation systems.</p>
     <hr />
     <div style="text-align:center">
         <a id="datadistribution" style="color:black;text-decoration:none;"><h1>Learning Connectivity for Data Distribution in Robot Teams</h1></a>
