--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,10 +24,10 @@
         color: #484848;">University of</p>
             <p style="        margin-bottom: 1rem;
         font-weight: 600;
-        color: #484848;">Pennsylvania</p>
+        color: #484848;">California, Berkeley</p>
         </li>
         <li>
-            <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;" href="https://dats.seas.upenn.edu/">Data Science</a>
+            <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;" href="https://dats.seas.upenn.edu/">Electrical Engineering Computer Science</a>
         </li>
         <li>
             <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;" href="https://www.ese.upenn.edu/">Systems Engineering</a>
