Updated home page content

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,10 +27,10 @@
         color: #484848;">California, Berkeley</p>
         </li>
         <li>
-            <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;" href="https://dats.seas.upenn.edu/">Electrical Engineering Computer Science</a>
+            <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;" href="https://eecs.berkeley.edu/">Electrical Engineering</a>
         </li>
         <li>
-            <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;" href="https://www.ese.upenn.edu/">Systems Engineering</a>
+            <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;" href="https://eecs.berkeley.edu/">Computer Science</a>
         </li>
     </ul>
 </div>
