--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,32 +4,18 @@ layout: default
 <title>Landon Butler</title>
 <div class="home">
     <p style="hyphens: none">
-        Hello! I'm Landon, a senior at the University of Pennsylvania. I'm concurrently pursuing a Master's degree in Data Science and a Bachelor's degree in Systems Engineering, seeking to better understand the systems that comprise the world around us from a data-driven perspective.
+        I am a first year Ph.D. student in EECS at Berkeley, affiliated with <a class="homepageLinks" href="https://bliss.eecs.berkeley.edu/">BLISS</a> and <a class="homepageLinks" href="https://bair.berkeley.edu/">BAIR</a>. 
+        I am advised by <a class="homepageLinks" href="https://people.eecs.berkeley.edu/~kannanr/">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
     </p>
     <p style="hyphens: none">
         My research lies at the confluence of network science and machine learning, 
         where I use mathematical and computational approaches to control, learn, 
         and infer the dynamics of complex real-world systems. 
-        So far, I've had the opportunity to research for 
-        <a class="homepageLinks" href="https://landonbutler.github.io/research#datadistribution">
-        data distribution polices within robot teams</a>, 
-        <a class="homepageLinks" href="https://landonbutler.github.io/research#multigraph">
-            multigraph learning frameworks</a>, and
-            <a class="homepageLinks" href="https://landonbutler.github.io/research#anomalydetection">anomaly detection techniques for hypergraphs</a>.
+        I have applied this work to a diverse set of domains including aviation, social systems, wireless communications, and robotics.
+
 </p>
     <p style="hyphens: none">
-        I'm also passionate about sharing about these fields through teaching. 
-        At Penn, I've been a teaching assistant for three courses: 
-        an undergraduate level course in data science, 
-        a master's level course in applied machine learning, 
-        and a PhD level course on graph neural networks. 
-        You can learn more about my teaching of these courses 
-        <a class="homepageLinks" href="https://landonbutler.github.io/teaching/">
-    here</a>!
+        Before Berkeley, I completed my Bachelor's in <a class="homepageLinks" href="https://www.ese.upenn.edu/">Systems Engineering</a> and my Master's in <a class="homepageLinks" href="https://dats.seas.upenn.edu/">Data Science</a> at the University of Pennsylvania.
+        I also had the chance to research under the supervision of <a class="homepageLinks" href="https://alelab.seas.upenn.edu/alejandro-ribeiro/">Prof. Alejandro Ribeiro</a> and complete my capstone project under <a class="homepageLinks" href="http://www.meganryerson.com/">Prof. Megan Ryerson</a>.
 </p>
-    <p style="hyphens: none">
-        Outside of academics, I'm a percussionist in the Penn Band and 
-        <a target="_blank" class="homepageLinks" href="https://www.youtube.com/watch?v=jZbI4XdOvA8">
-        write drum scores in my spare time</a>.
-    </p>
 </div>
