--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,8 @@ layout: default
 <title>Landon Butler</title>
 <div class="home">
     <p style="hyphens: none">
-        I am a first year Ph.D. student in EECS at Berkeley, affiliated with <a class="homepageLinks" href="https://bliss.eecs.berkeley.edu/">BLISS</a> and <a class="homepageLinks" href="https://bair.berkeley.edu/">BAIR</a>. 
-        I am advised by <a class="homepageLinks" href="https://people.eecs.berkeley.edu/~kannanr/">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
+        I am a first year Ph.D. student in EECS at Berkeley, affiliated with <a class="homepageLinks" target="_blank" href="https://bliss.eecs.berkeley.edu/">BLISS</a> and <a class="homepageLinks" target="_blank" href="https://bair.berkeley.edu/">BAIR</a>. 
+        I am advised by <a class="homepageLinks" target="_blank" href="https://people.eecs.berkeley.edu/~kannanr/">Kannan Ramchandran</a> and supported by the NSF GRFP.
     </p>
     <p style="hyphens: none">
         My research lies at the confluence of network science and machine learning, 
@@ -13,9 +13,15 @@ layout: default
         and infer the dynamics of complex real-world systems. 
         I have applied this work to a diverse set of domains including aviation, social systems, wireless communications, and robotics.
 
+
 </p>
     <p style="hyphens: none">
-        Before Berkeley, I completed my Bachelor's in <a class="homepageLinks" href="https://www.ese.upenn.edu/">Systems Engineering</a> and my Master's in <a class="homepageLinks" href="https://dats.seas.upenn.edu/">Data Science</a> at the University of Pennsylvania.
-        I also had the chance to research under the supervision of <a class="homepageLinks" href="https://alelab.seas.upenn.edu/alejandro-ribeiro/">Prof. Alejandro Ribeiro</a> and complete my capstone project under <a class="homepageLinks" href="http://www.meganryerson.com/">Prof. Megan Ryerson</a>.
+        Before Berkeley, I completed my Master's in <a class="homepageLinks" target="_blank" href="https://dats.seas.upenn.edu/">Data Science</a> and my Bachelor's in <a class="homepageLinks" target="_blank" href="https://www.ese.upenn.edu/">Systems Engineering</a> at the University of Pennsylvania.
+        I also had the chance to research under the supervision of <a class="homepageLinks" target="_blank" href="https://alelab.seas.upenn.edu/alejandro-ribeiro/">Alejandro Ribeiro</a> and complete my capstone project under <a class="homepageLinks" target="_blank" href="http://www.meganryerson.com/">Megan Ryerson</a>.
 </p>
+
+<p style="hyphens: none">
+        For reference, I provide my <a class="homepageLinks" target="_blank" href="../Landon Butler - CV.pdf">CV</a> and <a class="homepageLinks" target="_blank" href="https://drive.google.com/drive/folders/1KGvX3OkU8P8kZQ7BiKv26DMVkoRxyw3o?usp=sharing">NSF GRFP application</a>.
+</p>
+
 </div>
