--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
     <i class="far fa-user"></i>
   </a>
 
-  {% if site.data.navigation %}
+  {% if false %}
     <nav class="site-nav">
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
       <label for="nav-trigger" title="nav-trigger">
